--- a/TME_IC_Saito2008/V1/TME_IC.ipynb
+++ b/TME_IC_Saito2008/V1/TME_IC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{1: 0}, {1: 0, 3: 1, 4: 2}, {1: 0, 2: 1}]\n"
+      "[{1: 0, 2: 1}, {1: 0, 3: 1, 5: 2}, {1: 0, 3: 1, 5: 2}]\n"
      ]
     }
    ],
@@ -120,15 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{1: 0}, {1: 0, 3: 1, 4: 2}] \n",
-      " [[[1]], [[1], [3], [4]]]\n"
+      "[{1: 0, 2: 1}, {1: 0, 3: 1, 5: 2}] \n",
+      " [[[1], [2]], [[1], [3], [5]]]\n"
      ]
     }
    ],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,13 +162,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def P_sw(g,Ds,w):\n",
     "    ''' Vraisemblance de l infection d un noeud sachant le graphe \n",
-    "    et les noeuds précedemment acivés '''\n",
+    "    et les noeuds acivés à l'etape precedente '''\n",
     "    not_activated = 1\n",
     "    t = None\n",
     "    for i,nodes in enumerate(Ds):\n",
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,14 +228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Maximisation_uv(g,D_plus_id,Dminus_len,p_sw,u,v):\n",
     "    '''Calcule les nouveaux paramètre pour l'arete u,v '''\n",
     "    if ((len(D_plus_id[u][v])+Dminus_len[u][v]) == 0):\n",
-    "        print(f\"{u}-{v}\")\n",
+    "        raise Exception(f\"{u}-{v} Division zero\")\n",
     "    return (1/(len(D_plus_id[u][v])+Dminus_len[u][v])) *sum([g[u][v]/p_sw[i][v] for i in D_plus_id[u][v]])\n",
     "\n",
     "def Maximisation(g,D_plus_id,Dminus_len,p_sw):\n",
@@ -250,20 +250,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1: {2: 0.395, 3: 0.51, 4: 0.0, 5: 0.0},\n",
-       " 2: {1: 0.0, 3: 0.0, 4: 0.6265853370101946, 5: 1.5606190365682204e-43},\n",
-       " 3: {1: 0.0, 2: 0.0, 4: 0.4451595604818274, 5: 0.5392156862745098},\n",
+       "{1: {2: 0.525, 3: 0.515, 4: 0.0, 5: 0.0},\n",
+       " 2: {1: 0.0, 3: 0.0, 4: 0.5343367544806094, 5: 6.358967396678669e-28},\n",
+       " 3: {1: 0.0, 2: 0.0, 4: 0.40190256834499005, 5: 0.7281553398058251},\n",
        " 4: {1: 0.0, 2: 0.0, 3: 0.0, 5: 0.0},\n",
        " 5: {1: 0.0, 2: 0.0, 3: 0.0, 4: 0.0}}"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,15 +290,126 @@
    "metadata": {},
    "source": [
     "### Methode 2\n",
-    "Les temps d'infections non contiguë\n"
+    "Les temps d'infections non contiguë : \n",
+    "Un noeud peut désorais être infecté non seulement par ceux qui ont été infecté"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def P_sw2(g,Ds,w):\n",
+    "    ''' Vraisemblance de l infection d un noeud sachant le graphe \n",
+    "    et les tous noeuds précedemment acivés '''\n",
+    "    not_activated = 1\n",
+    "    t = None\n",
+    "    for i,nodes in enumerate(Ds):\n",
+    "        if (w in nodes):\n",
+    "            t = i\n",
+    "    if (t == 0): # si le noeud est le premier\n",
+    "        return 1\n",
+    "    if (t is None): # si le noeud n'est pas dans l'episode de diffusion\n",
+    "        raise Exception(f\"node {w} is not in diff episode : {Ds} \")\n",
+    "    else :  # si le noeud est dans l'épisode de diffusion\n",
+    "        preceding_nodes = [] # on regroupe les noeuds des épisodes précedents\n",
+    "        for nodes in Ds[:t]:\n",
+    "            for n in nodes : \n",
+    "                preceding_nodes.append(n)\n",
+    "        \n",
+    "        return 1 - np.prod ([1-g[parent][w] for parent in preceding_nodes])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Expectation2(g,D):\n",
+    "    ''' Calcule l'ensemble des P_ws \n",
+    "        P_ws[idD][node]->proba'''\n",
+    "    p_sw = [{n:P_sw2(g,Ds,n) for n in nodes_in_Ds(Ds)} for Ds in D]\n",
+    "    return p_sw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def D_plus_uv_id2(D,u,v):\n",
+    "    ''' Pour chaque couples u,v renvoit l'ensemble des \n",
+    "        Ds (episode infections) ou t_u < t_v'''\n",
+    "    D_plus = []\n",
+    "    \n",
+    "    for i,Ds in enumerate(D) : \n",
+    "        preceding_nodes = []\n",
+    "        for t in range(0,len(Ds)):\n",
+    "            if (v in Ds[t]):\n",
+    "                if (u in preceding_nodes):\n",
+    "                    D_plus.append(i)\n",
+    "                    break\n",
+    "            else : \n",
+    "                preceding_nodes +=Ds[t]\n",
+    "    return D_plus\n",
+    "\n",
+    "def D_minus_uv2(D,u,v):\n",
+    "    '''Pour chaque couple u,v renvoit l'ensemble des \n",
+    "    Ds(episode infection) ou u est present et non(t_u < t_v)'''\n",
+    "    D_minus = set()\n",
+    "    for i,Ds in enumerate(D) : \n",
+    "        u_in_Ds = False\n",
+    "        v_in_Ds = False\n",
+    "        for t in range(0,len(Ds)):\n",
+    "            if (u in Ds[t]):\n",
+    "                u_in_Ds = True\n",
+    "            if (u_in_Ds and v in Ds[t]):\n",
+    "                v_in_Ds = True\n",
+    "                break\n",
+    "        if (u_in_Ds and not v_in_Ds):\n",
+    "            D_minus.add(i)\n",
+    "    return D_minus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: {2: 0.525, 3: 0.515, 4: 2.020359559328906e-13, 5: 5.309676437916508e-31},\n",
+       " 2: {1: 0.0, 3: 0.0, 4: 0.5343367544805364, 5: 6.758718262551646e-28},\n",
+       " 3: {1: 0.0, 2: 0.0, 4: 0.40190256834481847, 5: 0.7281553398058251},\n",
+       " 4: {1: 0.0, 2: 0.0, 3: 0.0, 5: 0.0},\n",
+       " 5: {1: 0.0, 2: 0.0, 3: 0.0, 4: 0.0}}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def EM_IC_2(D,nodes):\n",
+    "    g = randomGraph(nodes)    \n",
+    "    p_sw = None\n",
+    "    D_plus_id =   {v:{u:D_plus_uv_id2(D,v,u) for u in nodes} for v in nodes}\n",
+    "    D_minus_len = {v:{u:len(D_minus_uv2(D,v,u))for u in nodes} for v in nodes}\n",
+    "    \n",
+    "    for i in range(100):\n",
+    "        p_sw = Expectation2(g,D)\n",
+    "        g = Maximisation(g,D_plus_id,D_minus_len,p_sw)\n",
+    "    return g\n",
+    "\n",
+    "D = [cascade_repr(c) for c in cascades]\n",
+    "finalGraph = EM_IC_2(D,nodes)\n",
+    "finalGraph"
+   ]
   },
   {
    "cell_type": "markdown",
