--- a/TME_IC_Saito2008/V1/TME_IC.ipynb
+++ b/TME_IC_Saito2008/V1/TME_IC.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "import numpy as np\n",
     "import math\n",
-    "import pprint as pp"
+    "import pprint as pp\n",
+    "from scipy import *\n",
+    "from scipy.sparse import *"
    ]
   },
   {
@@ -20,22 +22,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Handmade Graph\n",
+      "  (0, 1)\t0.5\n",
+      "  (0, 2)\t0.5\n",
+      "  (1, 3)\t0.6\n",
+      "  (2, 3)\t0.4\n",
+      "  (2, 4)\t0.6\n",
+      "Random Graph\n",
+      "  (0, 1)\t0.01380585\n",
+      "  (0, 2)\t0.12045385\n",
+      "  (0, 3)\t0.9242835\n",
+      "  (0, 4)\t0.9271036\n",
+      "  (0, 5)\t0.58627737\n",
+      "  (0, 6)\t0.7820021\n",
+      "  (1, 0)\t0.26275218\n",
+      "  (1, 2)\t0.46248782\n",
+      "  (1, 3)\t0.76651835\n",
+      "  (1, 4)\t0.7942892\n",
+      "  (1, 5)\t0.048704553\n",
+      "  (1, 6)\t0.10693046\n",
+      "  (2, 0)\t0.07987819\n",
+      "  (2, 1)\t0.53798825\n",
+      "  (2, 3)\t0.0013884571\n",
+      "  (2, 4)\t0.6654775\n",
+      "  (2, 5)\t0.60701716\n",
+      "  (2, 6)\t0.7376605\n",
+      "  (3, 0)\t0.6436996\n",
+      "  (3, 1)\t0.30618715\n",
+      "  (3, 2)\t0.3775682\n",
+      "  (3, 4)\t0.19333005\n",
+      "  (3, 5)\t0.44798687\n",
+      "  (3, 6)\t0.5529025\n",
+      "  (4, 0)\t0.7564873\n",
+      "  (4, 1)\t0.6781148\n",
+      "  (4, 2)\t0.89387196\n",
+      "  (4, 3)\t0.85022366\n",
+      "  (4, 5)\t0.16486518\n",
+      "  (4, 6)\t0.36842927\n",
+      "  (5, 0)\t0.65195864\n",
+      "  (5, 1)\t0.4542062\n",
+      "  (5, 2)\t0.49032673\n",
+      "  (5, 3)\t0.46577018\n",
+      "  (5, 4)\t0.5171134\n",
+      "  (5, 6)\t0.059312567\n",
+      "  (6, 0)\t0.35014343\n",
+      "  (6, 1)\t0.2241903\n",
+      "  (6, 2)\t0.8090689\n",
+      "  (6, 3)\t0.8025386\n",
+      "  (6, 4)\t0.55233866\n",
+      "  (6, 5)\t0.428516\n"
+     ]
+    }
+   ],
    "source": [
-    "handmadeGraph = {1: {2:0.5,3:0.5},\n",
+    "handmadeGraph1 = {1: {2:0.5,3:0.5},\n",
     "                 2: {4:0.6},\n",
     "                 3: {4:0.4,5:0.6},\n",
     "                 4: {},\n",
     "                 5: {},\n",
     "                }\n",
-    "nodes = np.arange(1,6)\n",
-    "def randomGraph(nodes):\n",
+    "\n",
+    "handmadeGraph=dok_matrix((7,7),dtype=float32)\n",
+    "handmadeGraph[0,1] =0.5\n",
+    "handmadeGraph[0,2] =0.5\n",
+    "handmadeGraph[1,3] =0.6\n",
+    "handmadeGraph[2,3] =0.4\n",
+    "handmadeGraph[2,4] =0.6\n",
+    "\n",
+    "print(\"Handmade Graph\")\n",
+    "print(handmadeGraph)\n",
+    "\n",
+    "\n",
+    "nodes = np.arange(handmadeGraph.shape[0])\n",
+    "\n",
+    "def randomGraph1(nodes):\n",
     "    graph = {}\n",
     "    for n in nodes:\n",
     "        graph[n] = {neigh:np.random.rand() for neigh in nodes if neigh!=n}\n",
-    "    return graph"
+    "    return graph\n",
+    "\n",
+    "def randomGraph(nodes):\n",
+    "    m=len(nodes)\n",
+    "    graph = dok_matrix((m,m),dtype=float32)\n",
+    "    for i in range(m):\n",
+    "        for j in range(m):\n",
+    "            if(i!=j):\n",
+    "                graph[i,j]=np.random.rand()\n",
+    "    return graph\n",
+    "print(\"Random Graph\")\n",
+    "print(randomGraph(nodes))"
    ]
   },
   {
@@ -48,11 +130,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def genCascade(graph,startNode,startTime=0):\n",
+    "def genCascade1(graph,startNode,startTime=0):\n",
     "    ''' Receive graph and starting infected node generate a cascade \n",
     "        Args\n",
     "            graph(node to child representation)\n",
@@ -73,25 +155,48 @@
     "        infected_next = {}\n",
     "        time +=1\n",
     "        \n",
+    "    return cascade\n",
+    "\n",
+    "def genCascade(graph,startNode,startTime=0):\n",
+    "    ''' Receive graph and starting infected node generate a cascade \n",
+    "        Args\n",
+    "            graph(node to child representation)\n",
+    "            cascade {node : time} \n",
+    "    '''\n",
+    "    cascade = {startNode : startTime}\n",
+    "    lastInfected = [startNode]\n",
+    "    infected_next = {}\n",
+    "    time = startTime+1\n",
+    "    while len(lastInfected)> 0:\n",
+    "        for infected in lastInfected:\n",
+    "            for (_,child),pct in graph[infected,:].items():\n",
+    "                if (child not in cascade) and (child not in infected_next):\n",
+    "                    if (np.random.rand()<pct):\n",
+    "                        infected_next[child] = time\n",
+    "        cascade.update(infected_next)\n",
+    "        lastInfected = list(infected_next.keys())\n",
+    "        infected_next = {}\n",
+    "        time +=1\n",
+    "        \n",
     "    return cascade"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{1: 0, 2: 1}, {1: 0, 3: 1, 5: 2}, {1: 0, 3: 1, 5: 2}]\n"
+      "[{0: 0, 1: 1}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2}, {0: 0, 2: 1}]\n"
      ]
     }
    ],
    "source": [
     "nbCascades = 200\n",
-    "cascades = [genCascade(handmadeGraph,1) for i in range(nbCascades)]\n",
+    "cascades = [genCascade(handmadeGraph,0) for i in range(nbCascades)]\n",
     "pp.pprint(cascades[:3])"
    ]
   },
@@ -120,15 +225,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{1: 0, 2: 1}, {1: 0, 3: 1, 5: 2}] \n",
-      " [[[1], [2]], [[1], [3], [5]]]\n"
+      "[{0: 0, 1: 1}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2}] \n",
+      " [[[0], [1]], [[0], [1, 2], [3, 4]]]\n"
      ]
     }
    ],
@@ -148,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,10 +267,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def P_sw1(g,Ds,w):\n",
+    "    ''' Vraisemblance de l infection d un noeud sachant le graphe \n",
+    "    et les noeuds acivés à l'etape precedente '''\n",
+    "    not_activated = 1\n",
+    "    t = None\n",
+    "    for i,nodes in enumerate(Ds):\n",
+    "        if (w in nodes):\n",
+    "            t = i\n",
+    "    if (t == 0): # si le noeud est le premier\n",
+    "        return 1\n",
+    "    if (t is None): # si le noeud n'est pas dans l'episode de diffusion\n",
+    "        raise Exception(f\"node {w} is not in diff episode : {Ds} \")\n",
+    "    else :  # si le noeud est dans l'épisode de diffusion\n",
+    "        return 1 - np.prod ([1-g[parent][w] for parent in Ds[t-1]])\n",
+    "\n",
     "def P_sw(g,Ds,w):\n",
     "    ''' Vraisemblance de l infection d un noeud sachant le graphe \n",
     "    et les noeuds acivés à l'etape precedente '''\n",
@@ -179,12 +299,12 @@
     "    if (t is None): # si le noeud n'est pas dans l'episode de diffusion\n",
     "        raise Exception(f\"node {w} is not in diff episode : {Ds} \")\n",
     "    else :  # si le noeud est dans l'épisode de diffusion\n",
-    "        return 1 - np.prod ([1-g[parent][w] for parent in Ds[t-1]])"
+    "        return 1 - np.prod ([1-g[parent,w] for parent in Ds[t-1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,30 +325,30 @@
     "    ''' pour chaque couples u,v renvoit l'ensemble des \n",
     "    Ds (episode infections) ou u precede v'''\n",
     "    D_plus = []\n",
-    "    for i,Ds in enumerate(D) : \n",
+    "    for i,Ds in enumerate(D): \n",
     "        for t in range(1,len(Ds)):\n",
     "            if (u in Ds[t-1] and v in Ds[t]):\n",
     "                D_plus.append(i)\n",
     "                break\n",
     "    return D_plus\n",
     "\n",
-    "def D_minus_uv(D,u,v):\n",
-    "    '''Pour chaque couple u,v renvoit l'ensemble des \n",
+    "def D_minus_uv_len(D,u,v):\n",
+    "    '''Pour chaque couple u,v renvoit le cardinal de l'ensemble des \n",
     "    Ds(episode infection) ou u est present mais v ne le suit pas'''\n",
-    "    D_minus = set()\n",
-    "    for i,Ds in enumerate(D) : \n",
+    "    D_minus_len=0\n",
+    "    for Ds in D : \n",
     "        for t in range(1,len(Ds)):\n",
     "            if (u in Ds[t-1] and v not in Ds[t]):\n",
-    "                D_minus.add(i)\n",
+    "                D_minus_len+=1\n",
     "                break\n",
     "        if (u in Ds[-1]):\n",
-    "            D_minus.add(i)\n",
-    "    return D_minus"
+    "            D_minus_len+=1\n",
+    "    return D_minus_len"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,36 +356,57 @@
     "    '''Calcule les nouveaux paramètre pour l'arete u,v '''\n",
     "    if ((len(D_plus_id[u][v])+Dminus_len[u][v]) == 0):\n",
     "        raise Exception(f\"{u}-{v} Division zero\")\n",
-    "    return (1/(len(D_plus_id[u][v])+Dminus_len[u][v])) *sum([g[u][v]/p_sw[i][v] for i in D_plus_id[u][v]])\n",
+    "    return (1/(len(D_plus_id[u][v])+Dminus_len[u][v])) *sum([g[u,v]/p_sw[i][v] for i in D_plus_id[u][v]])\n",
     "\n",
-    "def Maximisation(g,D_plus_id,Dminus_len,p_sw):\n",
+    "def Maximisation1(g,D_plus_id,Dminus_len,p_sw):\n",
     "    ''' Calcule les nouveaux paramètres pour le graphe'''\n",
     "    gprime = {k:dict() for k in g}\n",
     "    for u in g.keys():\n",
     "        for v in g.keys():\n",
     "            if u != v:\n",
     "                gprime[u][v] = Maximisation_uv(g,D_plus_id,Dminus_len,p_sw,u,v)\n",
-    "    return gprime"
+    "    return gprime\n",
+    "\n",
+    "def Maximisation(g,D_plus_id,Dminus_len,p_sw):\n",
+    "    ''' Calcule les nouveaux paramètres pour le graphe'''\n",
+    "    gprime = dok_matrix(g.shape,dtype=float32)\n",
+    "    for u,v in g.keys():\n",
+    "        if u != v:\n",
+    "            gprime[u,v] = Maximisation_uv(g,D_plus_id,Dminus_len,p_sw,u,v)\n",
+    "    return gprime\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{1: {2: 0.525, 3: 0.515, 4: 0.0, 5: 0.0},\n",
-       " 2: {1: 0.0, 3: 0.0, 4: 0.5343367544806094, 5: 6.358967396678669e-28},\n",
-       " 3: {1: 0.0, 2: 0.0, 4: 0.40190256834499005, 5: 0.7281553398058251},\n",
-       " 4: {1: 0.0, 2: 0.0, 3: 0.0, 5: 0.0},\n",
-       " 5: {1: 0.0, 2: 0.0, 3: 0.0, 4: 0.0}}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yass/.local/lib/python3.6/site-packages/ipykernel_launcher.py:5: DeprecationWarning: scipy.sum is deprecated and will be removed in SciPy 2.0.0, use numpy.sum instead\n",
+      "  \"\"\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 1)\t0.455\n",
+      "  (0, 2)\t0.46\n",
+      "  (1, 3)\t0.55122435\n",
+      "  (1, 4)\t1.5398606e-29\n",
+      "  (2, 3)\t0.4314661\n",
+      "  (2, 4)\t0.5652174\n"
+     ]
     }
    ],
    "source": [
@@ -274,15 +415,20 @@
     "    g = randomGraph(nodes)    \n",
     "    p_sw = None\n",
     "    D_plus_id =   {v:{u:D_plus_uv_id(D,v,u) for u in nodes} for v in nodes}\n",
-    "    D_minus_len = {v:{u:len(D_minus_uv(D,v,u))for u in nodes} for v in nodes}\n",
+    "    D_minus_len = {v:{u:D_minus_uv_len(D,v,u)for u in nodes} for v in nodes}\n",
     "    for i in range(100):\n",
     "        p_sw = Expectation(g,D)\n",
     "        g = Maximisation(g,D_plus_id,D_minus_len,p_sw)\n",
     "    return g\n",
     "\n",
+    "nodes = set()\n",
+    "for c in cascades:\n",
+    "    nodes.update(c.keys())\n",
+    "print(nodes)\n",
+    "\n",
     "D = [cascade_repr(c) for c in cascades]\n",
     "finalGraph = EM_IC(D,nodes)\n",
-    "finalGraph"
+    "print(finalGraph)"
    ]
   },
   {
@@ -296,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,12 +464,12 @@
     "            for n in nodes : \n",
     "                preceding_nodes.append(n)\n",
     "        \n",
-    "        return 1 - np.prod ([1-g[parent][w] for parent in preceding_nodes])"
+    "        return 1 - np.prod ([1-g[parent,w] for parent in preceding_nodes])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,11 +502,11 @@
     "                preceding_nodes +=Ds[t]\n",
     "    return D_plus\n",
     "\n",
-    "def D_minus_uv2(D,u,v):\n",
+    "def D_minus_uv2_len(D,u,v):\n",
     "    '''Pour chaque couple u,v renvoit l'ensemble des \n",
     "    Ds(episode infection) ou u est present et non(t_u < t_v)'''\n",
-    "    D_minus = set()\n",
-    "    for i,Ds in enumerate(D) : \n",
+    "    D_minus_len = 0\n",
+    "    for Ds in D : \n",
     "        u_in_Ds = False\n",
     "        v_in_Ds = False\n",
     "        for t in range(0,len(Ds)):\n",
@@ -370,28 +516,36 @@
     "                v_in_Ds = True\n",
     "                break\n",
     "        if (u_in_Ds and not v_in_Ds):\n",
-    "            D_minus.add(i)\n",
-    "    return D_minus"
+    "            D_minus_len+=1\n",
+    "    return D_minus_len"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{1: {2: 0.525, 3: 0.515, 4: 2.020359559328906e-13, 5: 5.309676437916508e-31},\n",
-       " 2: {1: 0.0, 3: 0.0, 4: 0.5343367544805364, 5: 6.758718262551646e-28},\n",
-       " 3: {1: 0.0, 2: 0.0, 4: 0.40190256834481847, 5: 0.7281553398058251},\n",
-       " 4: {1: 0.0, 2: 0.0, 3: 0.0, 5: 0.0},\n",
-       " 5: {1: 0.0, 2: 0.0, 3: 0.0, 4: 0.0}}"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yass/.local/lib/python3.6/site-packages/ipykernel_launcher.py:5: DeprecationWarning: scipy.sum is deprecated and will be removed in SciPy 2.0.0, use numpy.sum instead\n",
+      "  \"\"\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 1)\t0.455\n",
+      "  (0, 2)\t0.46\n",
+      "  (0, 3)\t5.1023683e-17\n",
+      "  (0, 4)\t3.2309702e-34\n",
+      "  (1, 3)\t0.55122435\n",
+      "  (1, 4)\t4.0758148e-29\n",
+      "  (2, 3)\t0.4314661\n",
+      "  (2, 4)\t0.5652174\n"
+     ]
     }
    ],
    "source": [
@@ -399,7 +553,7 @@
     "    g = randomGraph(nodes)    \n",
     "    p_sw = None\n",
     "    D_plus_id =   {v:{u:D_plus_uv_id2(D,v,u) for u in nodes} for v in nodes}\n",
-    "    D_minus_len = {v:{u:len(D_minus_uv2(D,v,u))for u in nodes} for v in nodes}\n",
+    "    D_minus_len = {v:{u:D_minus_uv2_len(D,v,u)for u in nodes} for v in nodes}\n",
     "    \n",
     "    for i in range(100):\n",
     "        p_sw = Expectation2(g,D)\n",
@@ -408,7 +562,7 @@
     "\n",
     "D = [cascade_repr(c) for c in cascades]\n",
     "finalGraph = EM_IC_2(D,nodes)\n",
-    "finalGraph"
+    "print(finalGraph)"
    ]
   },
   {
@@ -449,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
