--- a/TME_IC_Saito2008/V1/TME_IC.ipynb
+++ b/TME_IC_Saito2008/V1/TME_IC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -36,48 +36,48 @@
       "  (2, 3)\t0.4\n",
       "  (2, 4)\t0.6\n",
       "Random Graph\n",
-      "  (0, 1)\t0.85509074\n",
-      "  (0, 2)\t0.720146\n",
-      "  (0, 3)\t0.30122247\n",
-      "  (0, 4)\t0.65089786\n",
-      "  (0, 5)\t0.14567702\n",
-      "  (0, 6)\t0.35609236\n",
-      "  (1, 0)\t0.31820923\n",
-      "  (1, 2)\t0.90772665\n",
-      "  (1, 3)\t0.1180029\n",
-      "  (1, 4)\t0.34742156\n",
-      "  (1, 5)\t0.9842773\n",
-      "  (1, 6)\t0.16153888\n",
-      "  (2, 0)\t0.77540857\n",
-      "  (2, 1)\t0.416217\n",
-      "  (2, 3)\t0.7757969\n",
-      "  (2, 4)\t0.7786772\n",
-      "  (2, 5)\t0.36143216\n",
-      "  (2, 6)\t0.0063396688\n",
-      "  (3, 0)\t0.31420955\n",
-      "  (3, 1)\t0.46347323\n",
-      "  (3, 2)\t0.30967507\n",
-      "  (3, 4)\t0.7745039\n",
-      "  (3, 5)\t0.99524075\n",
-      "  (3, 6)\t0.7713674\n",
-      "  (4, 0)\t0.10656903\n",
-      "  (4, 1)\t0.7530032\n",
-      "  (4, 2)\t0.6491206\n",
-      "  (4, 3)\t0.56293464\n",
-      "  (4, 5)\t0.04105433\n",
-      "  (4, 6)\t0.96783847\n",
-      "  (5, 0)\t0.26462764\n",
-      "  (5, 1)\t0.3428392\n",
-      "  (5, 2)\t0.32807562\n",
-      "  (5, 3)\t0.59692323\n",
-      "  (5, 4)\t0.51387095\n",
-      "  (5, 6)\t0.34040385\n",
-      "  (6, 0)\t0.95887685\n",
-      "  (6, 1)\t0.049239907\n",
-      "  (6, 2)\t0.47832248\n",
-      "  (6, 3)\t0.0840934\n",
-      "  (6, 4)\t0.61603975\n",
-      "  (6, 5)\t0.8021358\n"
+      "  (0, 1)\t0.35793808\n",
+      "  (0, 2)\t0.9866501\n",
+      "  (0, 3)\t0.013221352\n",
+      "  (0, 4)\t0.1828696\n",
+      "  (0, 5)\t0.03427853\n",
+      "  (0, 6)\t0.38070202\n",
+      "  (1, 0)\t0.8288135\n",
+      "  (1, 2)\t0.055521414\n",
+      "  (1, 3)\t0.21423219\n",
+      "  (1, 4)\t0.77184093\n",
+      "  (1, 5)\t0.112766765\n",
+      "  (1, 6)\t0.0021552218\n",
+      "  (2, 0)\t0.18658401\n",
+      "  (2, 1)\t0.18757546\n",
+      "  (2, 3)\t0.2970758\n",
+      "  (2, 4)\t0.35188803\n",
+      "  (2, 5)\t0.8878879\n",
+      "  (2, 6)\t0.068491265\n",
+      "  (3, 0)\t0.8192144\n",
+      "  (3, 1)\t0.48997146\n",
+      "  (3, 2)\t0.01632727\n",
+      "  (3, 4)\t0.26126522\n",
+      "  (3, 5)\t0.40720692\n",
+      "  (3, 6)\t0.94067585\n",
+      "  (4, 0)\t0.5607623\n",
+      "  (4, 1)\t0.31207532\n",
+      "  (4, 2)\t0.32916886\n",
+      "  (4, 3)\t0.19208989\n",
+      "  (4, 5)\t0.21371375\n",
+      "  (4, 6)\t0.54073435\n",
+      "  (5, 0)\t0.22994892\n",
+      "  (5, 1)\t0.4682285\n",
+      "  (5, 2)\t0.7443926\n",
+      "  (5, 3)\t0.20502649\n",
+      "  (5, 4)\t0.87337327\n",
+      "  (5, 6)\t0.60775065\n",
+      "  (6, 0)\t0.33565366\n",
+      "  (6, 1)\t0.7427652\n",
+      "  (6, 2)\t0.5562697\n",
+      "  (6, 3)\t0.3382322\n",
+      "  (6, 4)\t0.17150491\n",
+      "  (6, 5)\t0.7333921\n"
      ]
     }
    ],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{0: 0, 2: 1, 3: 2}, {0: 0, 2: 1, 4: 2}, {0: 0, 2: 1, 4: 2}]\n"
+      "[{0: 0, 1: 1, 2: 1, 4: 2}, {0: 0, 1: 1, 2: 1}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2}]\n"
      ]
     }
    ],
@@ -197,15 +197,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{0: 0, 2: 1, 3: 2}, {0: 0, 2: 1, 4: 2}] \n",
-      " [[[0], [2], [3]], [[0], [2], [4]]]\n"
+      "[{0: 0, 1: 1, 2: 1, 4: 2}, {0: 0, 1: 1, 2: 1}] \n",
+      " [[[0], [1, 2], [4]], [[0], [1, 2]]]\n"
      ]
     }
    ],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,34 +328,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 1, 2, 3, 4}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/yass/.local/lib/python3.6/site-packages/ipykernel_launcher.py:5: DeprecationWarning: scipy.sum is deprecated and will be removed in SciPy 2.0.0, use numpy.sum instead\n",
-      "  \"\"\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  (0, 1)\t0.495\n",
-      "  (0, 2)\t0.56\n",
-      "  (1, 3)\t0.599039\n",
-      "  (1, 4)\t2.1120464e-31\n",
-      "  (2, 3)\t0.39005125\n",
-      "  (2, 4)\t0.54464287\n"
+      "{0, 1, 2, 3, 4}\n",
+      "  (0, 1)\t0.46\n",
+      "  (0, 2)\t0.54\n",
+      "  (1, 3)\t0.5957176\n",
+      "  (1, 4)\t4.4472476e-27\n",
+      "  (2, 3)\t0.41914776\n",
+      "  (2, 4)\t0.5740741\n"
      ]
     }
    ],
@@ -392,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,29 +458,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/yass/.local/lib/python3.6/site-packages/ipykernel_launcher.py:5: DeprecationWarning: scipy.sum is deprecated and will be removed in SciPy 2.0.0, use numpy.sum instead\n",
-      "  \"\"\"\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  (0, 1)\t0.495\n",
-      "  (0, 2)\t0.56\n",
-      "  (0, 3)\t6.0593626e-12\n",
-      "  (0, 4)\t1.6637431e-26\n",
-      "  (1, 3)\t0.599039\n",
-      "  (1, 4)\t4.449825e-31\n",
-      "  (2, 3)\t0.39005125\n",
-      "  (2, 4)\t0.54464287\n"
+      "  (0, 1)\t0.46\n",
+      "  (0, 2)\t0.54\n",
+      "  (0, 3)\t2.848232e-13\n",
+      "  (0, 4)\t1.4095633e-27\n",
+      "  (1, 3)\t0.5957176\n",
+      "  (1, 4)\t4.2353156e-27\n",
+      "  (2, 3)\t0.41914776\n",
+      "  (2, 4)\t0.5740741\n"
      ]
     }
    ],
@@ -523,11 +501,98 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On va évaluer les modèles par MeanAveragePrecision (MAP): <br>\n",
+    "On peut caculer $AP$ pour un épisode ($Ds$) en particulier : <br><br>\n",
+    "$ AP(Ds) =  \\sum_{i=1}^{|U^{Ds}|} \\frac{ |\\{ U_1^{Ds},...,U_i^{Ds} \\} \\cap Ds |}{i}  dx$ <br>\n",
+    "$ AP(Ds) = \\sum_{i=1}^{|U^{Ds}|} \\frac{TruePositive}{TruePositive+FalseNegative}dx$ <br><br>\n",
+    "$ dx = recall(i) -recall(i-1) $<br>\n",
+    "<br>\n",
+    "$ MAP = \\frac{1}{D}\\sum_{Ds\\in |D|} AP(Ds)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On va d'abord calculer les probabilité d'infection d'un noeud connaissant la source \n",
+    "par génération d'épisodes : "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def Pws_gs(graph,source,nbEpisode=100):\n",
+    "    ''' Calcule la probabilité qu'un noeud soit infecté connaissant \n",
+    "        une source et un graph de diffusion\n",
+    "        On calcule par moyenne sur echantionnage d'episodes d'infections '''\n",
+    "    proba_infected = {n:0 for n in range(graph.shape[0])}\n",
+    "    for i in range(nbEpisode):\n",
+    "        c = genCascade(graph,source)\n",
+    "        for node in c : \n",
+    "            proba_infected[node]+=1/nbEpisode\n",
+    "    return proba_infected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def AP(Ds,graph):\n",
+    "    '''Average Precision pour un episode Ds '''\n",
+    "    pws_gs =Pws_gs(graph,Ds[0][0])\n",
+    "    U_d = sorted(pws_gs,key=pws_gs.get,reverse=True) # sort par ordre decroissant\n",
+    "    ap = 0\n",
+    "    DsNodeSet = set(nodes_in_Ds(Ds)) # noeuds faisant partie de l'episode d'infection Ds\n",
+    "    \n",
+    "        # calcul des points de precision et de recall : \n",
+    "    precision = np.ones((len(U_d)+1))\n",
+    "    recall = np.zeros((len(U_d)+1))\n",
+    "    for i in range(1,len(precision)):\n",
+    "        tp = len(DsNodeSet.intersection(U_d[:i])) # TruePositive\n",
+    "        precision[i] = tp/i\n",
+    "        recall[i] = tp/len(DsNodeSet)\n",
+    "        \n",
+    "        # smooth precision curve\n",
+    "    for i in range(len(precision)-2,-1,-1):\n",
+    "        precision[i] = max(precision[i],precision[i+1])\n",
+    "    \n",
+    "    ap = 0\n",
+    "    for i in range(1,len(precision)):\n",
+    "        dx = recall[i]-recall[i-1]\n",
+    "        ap+= precision[i]* dx\n",
+    "\n",
+    "    return ap\n",
+    "\n",
+    "def MAP(D,graph):\n",
+    "    return sum([AP(Ds,graph)for Ds in D])/len(D)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "original  graph MAP score :  0.9303888888888889\n",
+      "inference graph MAP score :  0.9361944444444444\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"original  graph MAP score : \",MAP(D,handmadeGraph))\n",
+    "print(\"inference graph MAP score : \",MAP(D,finalGraph))"
+   ]
   },
   {
    "cell_type": "code",
@@ -553,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
