Add loglikelyhood test for 2008_Saito model

--- a/TME_IC_Saito2008/V1/TME_IC.ipynb
+++ b/TME_IC_Saito2008/V1/TME_IC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -36,48 +36,48 @@
       "  (2, 3)\t0.4\n",
       "  (2, 4)\t0.6\n",
       "Random Graph\n",
-      "  (0, 1)\t0.6668038\n",
-      "  (0, 2)\t0.22190805\n",
-      "  (0, 3)\t0.544171\n",
-      "  (0, 4)\t0.19102918\n",
-      "  (0, 5)\t0.8954404\n",
-      "  (0, 6)\t0.5133796\n",
-      "  (1, 0)\t0.1304498\n",
-      "  (1, 2)\t0.4974894\n",
-      "  (1, 3)\t0.5976379\n",
-      "  (1, 4)\t0.950712\n",
-      "  (1, 5)\t0.32473055\n",
-      "  (1, 6)\t0.74529326\n",
-      "  (2, 0)\t0.217423\n",
-      "  (2, 1)\t0.8162855\n",
-      "  (2, 3)\t0.1129149\n",
-      "  (2, 4)\t0.87297654\n",
-      "  (2, 5)\t0.7347039\n",
-      "  (2, 6)\t0.20040265\n",
-      "  (3, 0)\t0.94846225\n",
-      "  (3, 1)\t0.96577746\n",
-      "  (3, 2)\t0.6390994\n",
-      "  (3, 4)\t0.2123754\n",
-      "  (3, 5)\t0.5311662\n",
-      "  (3, 6)\t0.4648414\n",
-      "  (4, 0)\t0.17772995\n",
-      "  (4, 1)\t0.97153217\n",
-      "  (4, 2)\t0.4636219\n",
-      "  (4, 3)\t0.495635\n",
-      "  (4, 5)\t0.6778511\n",
-      "  (4, 6)\t0.99952847\n",
-      "  (5, 0)\t0.66017884\n",
-      "  (5, 1)\t0.12974547\n",
-      "  (5, 2)\t0.0077006654\n",
-      "  (5, 3)\t0.9104476\n",
-      "  (5, 4)\t0.59879464\n",
-      "  (5, 6)\t0.952536\n",
-      "  (6, 0)\t0.88597757\n",
-      "  (6, 1)\t0.3391013\n",
-      "  (6, 2)\t0.643241\n",
-      "  (6, 3)\t0.29102704\n",
-      "  (6, 4)\t0.71193\n",
-      "  (6, 5)\t0.53580844\n"
+      "  (0, 1)\t0.93857896\n",
+      "  (0, 2)\t0.62583864\n",
+      "  (0, 3)\t0.029500905\n",
+      "  (0, 4)\t0.8621696\n",
+      "  (0, 5)\t0.527808\n",
+      "  (0, 6)\t0.4375347\n",
+      "  (1, 0)\t0.77868205\n",
+      "  (1, 2)\t0.26330516\n",
+      "  (1, 3)\t0.3051763\n",
+      "  (1, 4)\t0.7532133\n",
+      "  (1, 5)\t0.04378199\n",
+      "  (1, 6)\t0.7300489\n",
+      "  (2, 0)\t0.22035505\n",
+      "  (2, 1)\t0.6918583\n",
+      "  (2, 3)\t0.060596995\n",
+      "  (2, 4)\t0.5126338\n",
+      "  (2, 5)\t0.9074306\n",
+      "  (2, 6)\t0.14785853\n",
+      "  (3, 0)\t0.23172624\n",
+      "  (3, 1)\t0.4172775\n",
+      "  (3, 2)\t0.28403005\n",
+      "  (3, 4)\t0.39601755\n",
+      "  (3, 5)\t0.69936335\n",
+      "  (3, 6)\t0.4211352\n",
+      "  (4, 0)\t0.6508224\n",
+      "  (4, 1)\t0.073217764\n",
+      "  (4, 2)\t0.33747414\n",
+      "  (4, 3)\t0.1268314\n",
+      "  (4, 5)\t0.05580198\n",
+      "  (4, 6)\t0.31187272\n",
+      "  (5, 0)\t0.30817372\n",
+      "  (5, 1)\t0.0046389573\n",
+      "  (5, 2)\t0.067223795\n",
+      "  (5, 3)\t0.8872486\n",
+      "  (5, 4)\t0.21884613\n",
+      "  (5, 6)\t0.16876236\n",
+      "  (6, 0)\t0.82495415\n",
+      "  (6, 1)\t0.58609045\n",
+      "  (6, 2)\t0.79915124\n",
+      "  (6, 3)\t0.34837213\n",
+      "  (6, 4)\t0.93654555\n",
+      "  (6, 5)\t0.8707274\n"
      ]
     }
    ],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{0: 0, 2: 1, 3: 2, 4: 2}, {0: 0, 1: 1, 3: 2}, {0: 0, 1: 1}]\n"
+      "[{0: 0, 2: 1}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2}]\n"
      ]
     }
    ],
@@ -192,20 +192,47 @@
     "1. On donne une première estimation des arêtes du graph : $k_{u,v}$ <br>\n",
     "- On calcule $P_{w}$ en fonction de $k_{u,v}$\n",
     "- On calcule par ML $k_{u,v}$ en fonction de $P_{w}$\n",
-    "- Retour à l'étape 2 jusqu'à convergence\n"
+    "- Retour à l'étape 2 jusqu'à convergence\n",
+    "\n",
+    "#### likelyhood\n",
+    "On peut vérifier que l'algorithme augmente sa vraisemblance à chaque étapes : <br>\n",
+    "On définit la vraisemblance qu'un noeud soit infecté ou non pour un épisode de diffusion Ds donné :<br>\n",
+    "$ P(v_t=t | D_s) = 1-\\prod_{u \\in Ds \\land\\\\ v_{t} = u_{t+1}}  1-\\theta_{u,v} $<br> \n",
+    "$ P(v_t=\\infty | D_s) = \\prod_{u \\in Ds }  1-\\theta_{u,v} $<br>\n",
+    "La vraisemblance d'une cascades c'est la probabilité que pour tous les noeuds du graphes : \n",
+    "- Si le noeud fait partie de la cascade : qu'il ait été infecté par un de ses prédécesseur\n",
+    "- Si le noeud ne fait pas partie de la cascade : qu'il n'ai jamais été infectés par les noeuds de la cascade\n",
+    "<br>\n",
+    "\n",
+    "<br> Puis on calcule la vraisemblance d'un Episode Ds : \n",
+    "\n",
+    "$L(Ds; \\theta) =\\left[ \\prod_{v \\notin Ds} P(v_t = \\infty | D_s) \\right]* \n",
+    "\\left[\\prod_{v \\in Ds} P(v_t = t | D_s)  \\right]$ <br>\n",
+    "\n",
+    "$L(Ds; \\theta) = \\left[ \\prod_{v \\notin Ds}1-\\prod_{u \\in Ds \\land\\\\ v_{t} = u_{t+1}}  1-\\theta_{u,v} \\right]* \n",
+    "\\left[\\prod_{v \\in Ds} \\prod_{u \\in Ds }  1-\\theta_{u,v} \\right] $ <br>\n",
+    "\n",
+    "Expression de la log-likelyhood : <br>\n",
+    "$L(Ds; \\theta) =\\left[ \\sum_{v \\notin Ds} log (P(v_t = \\infty | D_s)) \\right]+\n",
+    "\\left[\\sum_{v \\in Ds} log (P(v_t = t | D_s))  \\right]$ <br>\n",
+    "\n",
+    "\n",
+    "Donc pour l'ensemble des Epsiodes on a : <br>\n",
+    "$ L(D,\\theta ) =\\sum_{Ds \\in D} L(Ds; \\theta) $ <br>\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{0: 0, 2: 1, 3: 2, 4: 2}, {0: 0, 1: 1, 3: 2}] \n",
-      " [[[0], [2], [3, 4]], [[0], [1], [3]]]\n"
+      "[{0: 0, 2: 1}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2}] \n",
+      " [[[0], [2]], [[0], [1, 2], [3, 4]]]\n"
      ]
     }
    ],
@@ -225,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,15 +266,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def P_sw(g,Ds,w):\n",
-    "    ''' Vraisemblance de l infection d un noeud sachant le graphe \n",
-    "    et les noeuds acivés à l'etape precedente '''\n",
-    "    not_activated = 1\n",
+    "    '''Vraisemblanblance qu'un noeud w soit ou non infecté sachant la cascade Ds \n",
+    "        et les paramètres du graphe '''\n",
     "    t = None\n",
     "    for i,nodes in enumerate(Ds):\n",
     "        if (w in nodes):\n",
@@ -255,14 +280,24 @@
     "    if (t == 0): # si le noeud est le premier\n",
     "        return 1\n",
     "    if (t is None): # si le noeud n'est pas dans l'episode de diffusion\n",
-    "        raise Exception(f\"node {w} is not in diff episode : {Ds} \")\n",
+    "        return P_NotInfected_sw(g,Ds,w)\n",
     "    else :  # si le noeud est dans l'épisode de diffusion\n",
-    "        return 1 - np.prod ([1-g[parent,w] for parent in Ds[t-1]])"
+    "        return P_Infected_sw(g,Ds,w,t)\n",
+    "\n",
+    "def P_Infected_sw(g,Ds,w,t):\n",
+    "    ''' Vraisemblance de l'infection positive d un noeud à l'étape t sachant le graphe '''\n",
+    "    return 1 - np.prod ([1-g[parent,w] for parent in Ds[t-1]])\n",
+    "\n",
+    "\n",
+    "def P_NotInfected_sw(g,Ds,w):\n",
+    "    ''' Vraisemblance Qu'un noeud ne soit pas infecté dans un epsiode Ds sachant le \n",
+    "        graphe'''\n",
+    "    return np.prod([1-g[parent,w] for parent in nodes_in_Ds(Ds)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,6 +324,19 @@
     "                D_plus.append(i)\n",
     "                break\n",
     "    return D_plus\n",
+    "\n",
+    "def D_minus_uv_id(D,u,v):\n",
+    "    '''Pour chaque couple u,v renvoit l'ensemble des \n",
+    "    Ds(episode infection) ou u est present mais v ne le suit pas'''\n",
+    "    D_minus_id=[]\n",
+    "    for s,Ds in enumerate(D) : \n",
+    "        for t in range(1,len(Ds)):\n",
+    "            if (u in Ds[t-1] and v not in Ds[t]):\n",
+    "                D_minus_id.append(s)\n",
+    "                break\n",
+    "        if (u in Ds[-1]):\n",
+    "            D_minus_id.append(s)\n",
+    "    return D_minus_id\n",
     "\n",
     "def D_minus_uv_len(D,u,v):\n",
     "    '''Pour chaque couple u,v renvoit le cardinal de l'ensemble des \n",
@@ -306,7 +354,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def llikelyhood_Ds(g,Ds):\n",
+    "    '''Calcule la log vraisemblance d'une cascade selon le graph '''\n",
+    "    ll = 0\n",
+    "    for v,u in g.keys() :\n",
+    "        ll += np.log(P_sw(g,Ds,u))\n",
+    "    return ll\n",
+    "\n",
+    "def llikelyhood(g,D):\n",
+    "    total = 0\n",
+    "    for Ds in D : \n",
+    "        total +=llikelyhood_Ds(g,Ds)\n",
+    "    return total\n",
+    "    return sum([llikelyhood_Ds(g,Ds) for Ds in D])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -337,25 +406,37 @@
      "output_type": "stream",
      "text": [
       "{0, 1, 2, 3, 4}\n",
-      "  (0, 1)\t0.5\n",
-      "  (0, 2)\t0.51\n",
-      "  (1, 3)\t0.58487135\n",
-      "  (1, 4)\t4.70519e-32\n",
-      "  (2, 3)\t0.43633896\n",
-      "  (2, 4)\t0.54901963\n"
+      "Likelyhood Error : descreasing : from -612.2956394134784 to -612.2956394134786\n",
+      "  (0, 1)\t0.505\n",
+      "  (0, 2)\t0.55\n",
+      "  (1, 3)\t0.64085335\n",
+      "  (1, 4)\t2.816026e-23\n",
+      "  (2, 3)\t0.31335154\n",
+      "  (2, 4)\t0.6090909\n"
      ]
     }
    ],
    "source": [
-    "def EM_IC(D,nodes):\n",
+    "def EM_IC(D,nodes,debug = False):\n",
     "        # initalisation\n",
     "    g = randomGraph(nodes)    \n",
     "    p_sw = None\n",
     "    D_plus_id =   {v:{u:D_plus_uv_id(D,v,u) for u in nodes} for v in nodes}\n",
     "    D_minus_len = {v:{u:D_minus_uv_len(D,v,u)for u in nodes} for v in nodes}\n",
+    "    \n",
+    "    if debug:\n",
+    "        D_minus_id = {v:{u:D_minus_uv_id(D,v,u) for u in nodes} for v in nodes}\n",
+    "        ll = -float(\"inf\")\n",
     "    for i in range(100):\n",
     "        p_sw = Expectation(g,D)\n",
     "        g = Maximisation(g,D_plus_id,D_minus_len,p_sw)\n",
+    "        \n",
+    "        if debug : \n",
+    "            new_ll = llikelyhood(g,D)\n",
+    "            #print(new_ll)\n",
+    "            if new_ll < ll : \n",
+    "                print(f\"Likelyhood Error : descreasing : from {ll} to {new_ll}\")\n",
+    "            ll = new_ll\n",
     "    return g\n",
     "\n",
     "nodes = set()\n",
@@ -364,7 +445,7 @@
     "print(nodes)\n",
     "\n",
     "D = [cascade_repr(c) for c in cascades]\n",
-    "finalGraph = EM_IC(D,nodes)\n",
+    "finalGraph = EM_IC(D,nodes,True)\n",
     "print(finalGraph)"
    ]
   },
@@ -379,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,14 +547,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  (0, 1)\t0.5\n",
-      "  (0, 2)\t0.51\n",
-      "  (0, 3)\t4.7499366e-11\n",
-      "  (0, 4)\t1.5377493e-30\n",
-      "  (1, 3)\t0.58487135\n",
-      "  (1, 4)\t5.263753e-32\n",
-      "  (2, 3)\t0.43633896\n",
-      "  (2, 4)\t0.54901963\n"
+      "  (0, 1)\t0.48\n",
+      "  (0, 2)\t0.58\n",
+      "  (0, 3)\t1.9674571e-14\n",
+      "  (0, 4)\t2.1909428e-24\n",
+      "  (1, 3)\t0.6359873\n",
+      "  (1, 4)\t1.6481752e-18\n",
+      "  (2, 3)\t0.43380243\n",
+      "  (2, 4)\t0.57758623\n"
      ]
     }
    ],
@@ -585,8 +666,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original  graph MAP score :  0.9368333333333334\n",
-      "inference graph MAP score :  0.9268611111111111\n"
+      "original  graph MAP score :  0.9338611111111113\n",
+      "inference graph MAP score :  0.9393055555555557\n"
      ]
     }
    ],
@@ -632,15 +713,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original  graph MAP score :  0.9600711480474993\n",
-      "predictedGraph MAP score :  0.8040477578916287\n"
+      "original  graph MAP score :  0.9538477381403271\n",
+      "predictedGraph MAP score :  0.8455313366268303\n"
      ]
     }
    ],
@@ -655,13 +736,6 @@
     "print(\"original  graph MAP score : \",originalScore)\n",
     "print(\"predictedGraph MAP score : \",predictedScore)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
