Add logLikelyhood for not_contiguous model

--- a/TME_IC_Saito2008/V1/TME_IC.ipynb
+++ b/TME_IC_Saito2008/V1/TME_IC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,48 +36,48 @@
       "  (2, 3)\t0.4\n",
       "  (2, 4)\t0.6\n",
       "Random Graph\n",
-      "  (0, 1)\t0.93857896\n",
-      "  (0, 2)\t0.62583864\n",
-      "  (0, 3)\t0.029500905\n",
-      "  (0, 4)\t0.8621696\n",
-      "  (0, 5)\t0.527808\n",
-      "  (0, 6)\t0.4375347\n",
-      "  (1, 0)\t0.77868205\n",
-      "  (1, 2)\t0.26330516\n",
-      "  (1, 3)\t0.3051763\n",
-      "  (1, 4)\t0.7532133\n",
-      "  (1, 5)\t0.04378199\n",
-      "  (1, 6)\t0.7300489\n",
-      "  (2, 0)\t0.22035505\n",
-      "  (2, 1)\t0.6918583\n",
-      "  (2, 3)\t0.060596995\n",
-      "  (2, 4)\t0.5126338\n",
-      "  (2, 5)\t0.9074306\n",
-      "  (2, 6)\t0.14785853\n",
-      "  (3, 0)\t0.23172624\n",
-      "  (3, 1)\t0.4172775\n",
-      "  (3, 2)\t0.28403005\n",
-      "  (3, 4)\t0.39601755\n",
-      "  (3, 5)\t0.69936335\n",
-      "  (3, 6)\t0.4211352\n",
-      "  (4, 0)\t0.6508224\n",
-      "  (4, 1)\t0.073217764\n",
-      "  (4, 2)\t0.33747414\n",
-      "  (4, 3)\t0.1268314\n",
-      "  (4, 5)\t0.05580198\n",
-      "  (4, 6)\t0.31187272\n",
-      "  (5, 0)\t0.30817372\n",
-      "  (5, 1)\t0.0046389573\n",
-      "  (5, 2)\t0.067223795\n",
-      "  (5, 3)\t0.8872486\n",
-      "  (5, 4)\t0.21884613\n",
-      "  (5, 6)\t0.16876236\n",
-      "  (6, 0)\t0.82495415\n",
-      "  (6, 1)\t0.58609045\n",
-      "  (6, 2)\t0.79915124\n",
-      "  (6, 3)\t0.34837213\n",
-      "  (6, 4)\t0.93654555\n",
-      "  (6, 5)\t0.8707274\n"
+      "  (0, 1)\t0.6180685\n",
+      "  (0, 2)\t0.4229839\n",
+      "  (0, 3)\t0.86237955\n",
+      "  (0, 4)\t0.23280615\n",
+      "  (0, 5)\t0.3271042\n",
+      "  (0, 6)\t0.9036698\n",
+      "  (1, 0)\t0.053995\n",
+      "  (1, 2)\t0.65214217\n",
+      "  (1, 3)\t0.5931676\n",
+      "  (1, 4)\t0.74915045\n",
+      "  (1, 5)\t0.853278\n",
+      "  (1, 6)\t0.017607015\n",
+      "  (2, 0)\t0.3747932\n",
+      "  (2, 1)\t0.6724424\n",
+      "  (2, 3)\t0.2704413\n",
+      "  (2, 4)\t0.5178566\n",
+      "  (2, 5)\t0.1375238\n",
+      "  (2, 6)\t0.09495177\n",
+      "  (3, 0)\t0.31038502\n",
+      "  (3, 1)\t0.9630717\n",
+      "  (3, 2)\t0.75990295\n",
+      "  (3, 4)\t0.13750456\n",
+      "  (3, 5)\t0.6490644\n",
+      "  (3, 6)\t0.47963157\n",
+      "  (4, 0)\t0.2674974\n",
+      "  (4, 1)\t0.61191833\n",
+      "  (4, 2)\t0.8299125\n",
+      "  (4, 3)\t0.16778144\n",
+      "  (4, 5)\t0.031052746\n",
+      "  (4, 6)\t0.73905456\n",
+      "  (5, 0)\t0.13553852\n",
+      "  (5, 1)\t0.85521525\n",
+      "  (5, 2)\t0.0031188752\n",
+      "  (5, 3)\t0.74759\n",
+      "  (5, 4)\t0.614732\n",
+      "  (5, 6)\t0.7110168\n",
+      "  (6, 0)\t0.100177094\n",
+      "  (6, 1)\t0.7245161\n",
+      "  (6, 2)\t0.91887635\n",
+      "  (6, 3)\t0.40120974\n",
+      "  (6, 4)\t0.90008336\n",
+      "  (6, 5)\t0.7056607\n"
      ]
     }
    ],
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{0: 0, 2: 1}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2}]\n"
+      "[{0: 0, 1: 1, 2: 1, 3: 2}, {0: 0, 1: 1, 3: 2}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2}]\n"
      ]
     }
    ],
@@ -224,15 +224,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{0: 0, 2: 1}, {0: 0, 1: 1, 2: 1, 3: 2, 4: 2}] \n",
-      " [[[0], [2]], [[0], [1, 2], [3, 4]]]\n"
+      "[{0: 0, 1: 1, 2: 1, 3: 2}, {0: 0, 1: 1, 3: 2}] \n",
+      " [[[0], [1, 2], [3]], [[0], [1], [3]]]\n"
      ]
     }
    ],
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -406,13 +406,12 @@
      "output_type": "stream",
      "text": [
       "{0, 1, 2, 3, 4}\n",
-      "Likelyhood Error : descreasing : from -612.2956394134784 to -612.2956394134786\n",
-      "  (0, 1)\t0.505\n",
-      "  (0, 2)\t0.55\n",
-      "  (1, 3)\t0.64085335\n",
-      "  (1, 4)\t2.816026e-23\n",
-      "  (2, 3)\t0.31335154\n",
-      "  (2, 4)\t0.6090909\n"
+      "  (0, 1)\t0.59\n",
+      "  (0, 2)\t0.575\n",
+      "  (1, 3)\t0.649036\n",
+      "  (1, 4)\t2.9625724e-26\n",
+      "  (2, 3)\t0.43192917\n",
+      "  (2, 4)\t0.6\n"
      ]
     }
    ],
@@ -425,15 +424,14 @@
     "    D_minus_len = {v:{u:D_minus_uv_len(D,v,u)for u in nodes} for v in nodes}\n",
     "    \n",
     "    if debug:\n",
-    "        D_minus_id = {v:{u:D_minus_uv_id(D,v,u) for u in nodes} for v in nodes}\n",
-    "        ll = -float(\"inf\")\n",
+    "        ll = -float(\"inf\") # ll : loglikelyhood\n",
+    "        \n",
     "    for i in range(100):\n",
     "        p_sw = Expectation(g,D)\n",
     "        g = Maximisation(g,D_plus_id,D_minus_len,p_sw)\n",
     "        \n",
     "        if debug : \n",
     "            new_ll = llikelyhood(g,D)\n",
-    "            #print(new_ll)\n",
     "            if new_ll < ll : \n",
     "                print(f\"Likelyhood Error : descreasing : from {ll} to {new_ll}\")\n",
     "            ll = new_ll\n",
@@ -455,18 +453,23 @@
    "source": [
     "### Methode 2\n",
     "Les temps d'infections non contiguë : \n",
-    "Un noeud peut désorais être infecté non seulement par ceux qui ont été infecté"
+    "Un noeud peut désorais être infecté non seulement par ceux qui ont été infecté<br>\n",
+    "On doit alors redéfinir la likelyhood : <br>\n",
+    "$ P(v_t=t | D_s) = 1-\\prod_{u \\in Ds \\land\\\\ v_{t} < u_{t}}  1-\\theta_{u,v} $<br> \n",
+    "$ P(v_t=\\infty | D_s) = \\prod_{u \\in Ds }  1-\\theta_{u,v} $<br>\n",
+    "$L(Ds; \\theta) =\\left[ \\prod_{v \\notin Ds} P(v_t = \\infty | D_s) \\right]* \n",
+    "\\left[\\prod_{v \\in Ds} P(v_t = t | D_s)  \\right]$ <br>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def P_sw2(g,Ds,w):\n",
+    "def P_sw_not_contiguous(g,Ds,w):\n",
     "    ''' Vraisemblance de l infection d un noeud sachant le graphe \n",
-    "    et les tous noeuds précedemment acivés '''\n",
+    "    et les tous noeuds précedemment activés (tps infection non contigue) '''\n",
     "    not_activated = 1\n",
     "    t = None\n",
     "    for i,nodes in enumerate(Ds):\n",
@@ -475,32 +478,56 @@
     "    if (t == 0): # si le noeud est le premier\n",
     "        return 1\n",
     "    if (t is None): # si le noeud n'est pas dans l'episode de diffusion\n",
-    "        raise Exception(f\"node {w} is not in diff episode : {Ds} \")\n",
-    "    else :  # si le noeud est dans l'épisode de diffusion\n",
-    "        preceding_nodes = [] # on regroupe les noeuds des épisodes précedents\n",
-    "        for nodes in Ds[:t]:\n",
-    "            for n in nodes : \n",
-    "                preceding_nodes.append(n)\n",
+    "        return P_NotInfected_sw(g,Ds,w)\n",
+    "    else :  # si le noeud est dans l'épisode de diffusion        \n",
+    "        return P_sw_infected_not_contiguous(g,Ds,w,t)\n",
+    "\n",
+    "def P_sw_infected_not_contiguous(g,Ds,w,t):\n",
+    "    preceding_nodes = [] # on regroupe les noeuds des épisodes précedents\n",
+    "    for nodes in Ds[:t]:\n",
+    "        for n in nodes : \n",
+    "            preceding_nodes.append(n)\n",
     "        \n",
-    "        return 1 - np.prod ([1-g[parent,w] for parent in preceding_nodes])"
+    "    return 1 - np.prod ([1-g[parent,w] for parent in preceding_nodes])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def llikelyhood_Ds_notContiguous(g,Ds):\n",
+    "    '''Calcule la log vraisemblance d'une cascade selon le graph '''\n",
+    "    ll = 0\n",
+    "    for v,u in g.keys() :\n",
+    "        ll += np.log(P_sw_not_contiguous(g,Ds,u))\n",
+    "    return ll\n",
+    "\n",
+    "def llikelyhood_notContiguous(g,D):\n",
+    "    total = 0\n",
+    "    for Ds in D : \n",
+    "        total +=llikelyhood_Ds(g,Ds)\n",
+    "    return total\n",
+    "    return sum([llikelyhood_Ds(g,Ds) for Ds in D])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def Expectation2(g,D):\n",
     "    ''' Calcule l'ensemble des P_ws \n",
     "        P_ws[idD][node]->proba'''\n",
-    "    p_sw = [{n:P_sw2(g,Ds,n) for n in nodes_in_Ds(Ds)} for Ds in D]\n",
+    "    p_sw = [{n:P_sw_not_contiguous(g,Ds,n) for n in nodes_in_Ds(Ds)} for Ds in D]\n",
     "    return p_sw"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,38 +567,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  (0, 1)\t0.48\n",
-      "  (0, 2)\t0.58\n",
-      "  (0, 3)\t1.9674571e-14\n",
-      "  (0, 4)\t2.1909428e-24\n",
-      "  (1, 3)\t0.6359873\n",
-      "  (1, 4)\t1.6481752e-18\n",
-      "  (2, 3)\t0.43380243\n",
-      "  (2, 4)\t0.57758623\n"
+      "  (0, 1)\t0.59\n",
+      "  (0, 2)\t0.575\n",
+      "  (0, 3)\t1.3324788e-09\n",
+      "  (0, 4)\t2.911694e-25\n",
+      "  (1, 3)\t0.649036\n",
+      "  (1, 4)\t1.0341109e-25\n",
+      "  (2, 3)\t0.43192914\n",
+      "  (2, 4)\t0.6\n"
      ]
     }
    ],
    "source": [
-    "def EM_IC_2(D,nodes):\n",
+    "def EM_IC_2(D,nodes, debug=False):\n",
     "    g = randomGraph(nodes)    \n",
     "    p_sw = None\n",
     "    D_plus_id =   {v:{u:D_plus_uv_id2(D,v,u) for u in nodes} for v in nodes}\n",
     "    D_minus_len = {v:{u:D_minus_uv2_len(D,v,u)for u in nodes} for v in nodes}\n",
     "    \n",
+    "    if (debug):\n",
+    "        ll = -float('inf')\n",
+    "    \n",
     "    for i in range(100):\n",
     "        p_sw = Expectation2(g,D)\n",
     "        g = Maximisation(g,D_plus_id,D_minus_len,p_sw)\n",
+    "        \n",
+    "        if debug : \n",
+    "            new_ll = llikelyhood_notContiguous(g,D)\n",
+    "            if new_ll < ll : \n",
+    "                print(f\"Likelyhood Error : descreasing : from {ll} to {new_ll}\")\n",
+    "            ll = new_ll\n",
+    "\n",
     "    return g\n",
     "\n",
     "D = [cascade_repr(c) for c in cascades]\n",
-    "finalGraph = EM_IC_2(D,nodes)\n",
+    "finalGraph = EM_IC_2(D,nodes,True)\n",
     "print(finalGraph)"
    ]
   },
