Remove useless edges à EM start

--- a/TME_IC_Saito2008/V1/TME_IC.ipynb
+++ b/TME_IC_Saito2008/V1/TME_IC.ipynb
@@ -398,7 +398,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_edges(g,nodes,D_plus):\n",
+    "    ''' Retire en place tous les arêtes (u,v) ou il n'existe pas de cascade ou \n",
+    "        u précède v. (=>on ne peut rien dire sur les probabilité que u infecte v)\n",
+    "    '''\n",
+    "    for n1 in nodes : \n",
+    "        for n2 in nodes : \n",
+    "            if len(D_plus[n1][n2]) == 0:\n",
+    "                g[n1,n2] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -408,9 +424,9 @@
       "{0, 1, 2, 3, 4}\n",
       "  (0, 1)\t0.59\n",
       "  (0, 2)\t0.575\n",
-      "  (1, 3)\t0.649036\n",
-      "  (1, 4)\t2.9625724e-26\n",
-      "  (2, 3)\t0.43192917\n",
+      "  (1, 3)\t0.64903605\n",
+      "  (1, 4)\t9.652191e-26\n",
+      "  (2, 3)\t0.4319291\n",
       "  (2, 4)\t0.6\n"
      ]
     }
@@ -422,6 +438,7 @@
     "    p_sw = None\n",
     "    D_plus_id =   {v:{u:D_plus_uv_id(D,v,u) for u in nodes} for v in nodes}\n",
     "    D_minus_len = {v:{u:D_minus_uv_len(D,v,u)for u in nodes} for v in nodes}\n",
+    "    remove_edges(g,nodes,D_plus_id)\n",
     "    \n",
     "    if debug:\n",
     "        ll = -float(\"inf\") # ll : loglikelyhood\n",
@@ -463,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -576,11 +593,11 @@
      "text": [
       "  (0, 1)\t0.59\n",
       "  (0, 2)\t0.575\n",
-      "  (0, 3)\t1.3324788e-09\n",
-      "  (0, 4)\t2.911694e-25\n",
-      "  (1, 3)\t0.649036\n",
-      "  (1, 4)\t1.0341109e-25\n",
-      "  (2, 3)\t0.43192914\n",
+      "  (0, 3)\t4.1101425e-06\n",
+      "  (0, 4)\t4.25779e-16\n",
+      "  (1, 3)\t0.64903504\n",
+      "  (1, 4)\t7.6382287e-16\n",
+      "  (2, 3)\t0.4319261\n",
       "  (2, 4)\t0.6\n"
      ]
     }
@@ -591,11 +608,12 @@
     "    p_sw = None\n",
     "    D_plus_id =   {v:{u:D_plus_uv_id2(D,v,u) for u in nodes} for v in nodes}\n",
     "    D_minus_len = {v:{u:D_minus_uv2_len(D,v,u)for u in nodes} for v in nodes}\n",
-    "    \n",
+    "    remove_edges(g,nodes,D_plus_id)\n",
+    "\n",
     "    if (debug):\n",
     "        ll = -float('inf')\n",
     "    \n",
-    "    for i in range(100):\n",
+    "    for i in range(60):\n",
     "        p_sw = Expectation2(g,D)\n",
     "        g = Maximisation(g,D_plus_id,D_minus_len,p_sw)\n",
     "        \n",
