Simplify AveragePrecision formula

--- a/TME_IC_Saito2008/V1/TME_IC.ipynb
+++ b/TME_IC_Saito2008/V1/TME_IC.ipynb
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,26 +686,13 @@
     "    '''Average Precision pour un episode Ds '''\n",
     "    pws_gs =Pws_gs(graph,Ds[0][0])\n",
     "    U_d = sorted(pws_gs,key=pws_gs.get,reverse=True) # sort par ordre decroissant\n",
-    "    ap = 0\n",
     "    DsNodeSet = set(nodes_in_Ds(Ds)) # noeuds faisant partie de l'episode d'infection Ds\n",
-    "    \n",
-    "        # calcul des points de precision et de recall : \n",
-    "    precision = np.ones((len(U_d)+1))\n",
-    "    recall = np.zeros((len(U_d)+1))\n",
-    "    for i in range(1,len(precision)):\n",
-    "        tp = len(DsNodeSet.intersection(U_d[:i])) # TruePositive\n",
-    "        precision[i] = tp/i\n",
-    "        recall[i] = tp/len(DsNodeSet)\n",
-    "        \n",
-    "        # smooth precision curve\n",
-    "    for i in range(len(precision)-2,-1,-1):\n",
-    "        precision[i] = max(precision[i],precision[i+1])\n",
-    "    \n",
-    "    ap = 0\n",
-    "    for i in range(1,len(precision)):\n",
-    "        dx = recall[i]-recall[i-1]\n",
-    "        ap+= precision[i]* dx\n",
-    "\n",
+    "    ap =0\n",
+    "    for i,node in enumerate(U_d) : \n",
+    "        if (node in DsNodeSet):\n",
+    "            tp = len(DsNodeSet.intersection(U_d[:(i+1)])) # true positive\n",
+    "            ap+= tp/(i+1) # precision = tp/(tp+fp)\n",
+    "    ap/= len(DsNodeSet)\n",
     "    return ap\n",
     "\n",
     "def MAP(D,graph):\n",
@@ -714,15 +701,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "original  graph MAP score :  0.9338611111111113\n",
-      "inference graph MAP score :  0.9393055555555557\n"
+      "original  graph MAP score :  0.9480277777777778\n",
+      "inference graph MAP score :  0.94025\n"
      ]
     }
    ],
